--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 DB_PARAMETER_URL="postgresql+asyncpg://{username}:{password}@{hostname}:{port}/db_parameter"
 DB_TRANSACTION_URL="postgresql+asyncpg://{username}:{password}@{hostname}:{port}/db_transaction"
+JWT_SECRET="<your generated secret key"
+JWT_EXPIRE_TIME="40" # in minutes
+algorithm="HS256"
